styles/globals.css
@import 'antd/dist/antd.css';
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
@import 'react-multi-carousel/lib/styles.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --primary-color-rgb: 13, 173, 185;
  --primary-color: rgb(var(--primary-color-rgb));
  --hover-brightness: 0.9;
  --alpha-light-variant: 0.6;
  --primary-light-color: rgba(
    var(--primary-color-rgb),
    var(--alpha-light-variant)
  );
}

@layer base {
  html,
  body {
    font-family: 'Lato', sans-serif;
  }
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  .h1,
  .h2,
  .h3,
  .h4,
  .h5,
  .h6 {
    @apply font-lato font-semibold text-dark-1000 !mb-0;
  }
  h1,
  .h1 {
    @apply text-[40px] leading-[46px] lg:text-[60px] lg:leading-[68px];
  }
  h2,
  .h2 {
    @apply text-[32px] leading-tight lg:text-[44px] lg:leading-[50px];
  }
  h3,
  .h3 {
    @apply text-[24px] leading-7 lg:text-[32px] lg:leading-[38px];
  }
  h4,
  .h4 {
    @apply text-lg leading-6 lg:text-[24px] lg:leading-[29px];
  }
  h5,
  .h5 {
    @apply text-[18px] leading-[22px] lg:text-lg lg:leading-6;
  }
  h6,
  .h6 {
    @apply text-sm leading-5 lg:text-[18px] lg:leading-[22px];
  }
  input[type='radio'] {
    @apply relative h-6 w-6 text-primary-600 border-dark-300 checked:bg-none checked:bg-primary-1000 checked:border-primary-1000 checked:focus:bg-primary-1000 checked:hover:bg-primary-1000 focus:ring-0 focus:ring-offset-0;
  }
  input[type='radio']:checked::before {
    content: '';
    @apply bg-primary-1000 border-white border-4 rounded-full absolute inset-[2px];
  }
  input[type='checkbox'] {
    @apply relative h-6 w-6 text-primary-600 border-dark-300 rounded-4 checked:bg-primary-1000 checked:border-primary-1000 checked:focus:bg-primary-1000 checked:hover:bg-primary-1000 focus:ring-0 focus:ring-offset-0;
  }
  input[type='checkbox'] {
    @apply relative h-6 w-6 text-primary-600 border-dark-300 rounded-4 checked:bg-primary-1000 checked:border-primary-1000 checked:focus:bg-primary-1000 checked:hover:bg-primary-1000 focus:ring-0 focus:ring-offset-0;
  }
}

.plg {
  @apply font-lato text-lg leading-[28px];
}

.pmd {
  @apply font-lato text-base leading-6;
}

.psm {
  @apply font-lato text-sm leading-[22px];
}

.pxs {
  @apply font-lato text-[14px] leading-4;
}

.plg {
  @apply font-lato text-lg leading-[28px];
}

.pmd {
  @apply font-lato text-base leading-6;
}

.psm {
  @apply font-lato text-sm leading-[22px];
}

.pxs {
  @apply font-lato text-[14px] leading-4;
}

a {
  color: inherit;
  text-decoration: none;
}

label {
  @apply font-lato font-semibold text-sm leading-4 text-dark-800;
}

* {
  box-sizing: border-box;
}

.ant-input:hover,
.ant-input:focus,
.ant-input-number:hover,
.ant-input-number:focus .ant-input-affix-wrapper:hover,
.ant-picker:hover,
.ant-checkbox:hover,
.ant-date-picker-input.ant-input,
.ant-checkbox-wrapper .ant-checkbox-inner:hover {
  border-color: var(--primary-color);
  color: var(--primary-color);
}
.ant-input:focus,
.ant-input-number:focus {
  box-shadow: lightgray !important;
}

.anticon:before {
  display: block !important;
  font-family: 'anticon' !important;
}

.ant-spin-text {
  color: var(--primary-color);
}

.ant-spin-dot-item {
  background-color: var(--primary-color) !important;
}

.ReactCollapse--collapse {
  transition: height 300ms;
}

@layer utilities {
  input[type='number']::-webkit-inner-spin-button,
  input[type='number']::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
}

/* Range Slider */
input[type='range']::-webkit-slider-thumb {
  pointer-events: auto;
  width: 32px;
  height: 32px;
  border-radius: 50%;
  border: 1px solid;
  -webkit-appearance: none;
  @apply bg-primary-200 border-primary-600;
}

